[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Wall/wall.gd" type="Script" id=1]
[ext_resource path="res://Assets/NuevosSprites/ladrillo3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Musica/Effects/colision-madera.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0953, 15.9312 )

[node name="Ladrillo2" type="Area2D" groups=[
"animated",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.561752, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.589527, 0.0655041 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
